refactor: Introduce TrajectoryGroups

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -51,44 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TrajectoryGroup(trajectories=[Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={}), Trajectory(messages_and_choices=[], reward=0.0, metrics={}, metadata={})], metadata={})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import art\n",
-    "\n",
-    "\n",
-    "async def rollout() -> art.Trajectory:\n",
-    "    return art.Trajectory(messages_and_choices=[], reward=0.0)\n",
-    "\n",
-    "\n",
-    "group = await art.TrajectoryGroup(rollout() for _ in range(10))\n",
-    "group"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import art\n",
-    "import asyncio\n",
     "from dotenv import load_dotenv\n",
     "import openai\n",
-    "\n",
-    "import art.trajectories\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -142,17 +111,13 @@
     "\n",
     "openai_client = await model.openai_client()\n",
     "for i in range(await model.get_step(), 1_000):\n",
-    "    val_groups, train_groups = await asyncio.gather(\n",
-    "        art.gather_trajectories(\n",
-    "            ((rollout(openai_client, prompt) for _ in range(4)) for prompt in prompts),\n",
-    "            pbar_desc=\"val\",\n",
+    "    train_groups = await art.gather_trajectory_groups(\n",
+    "        (\n",
+    "            art.TrajectoryGroup(rollout(openai_client, prompt) for _ in range(64))\n",
+    "            for prompt in prompts\n",
     "        ),\n",
-    "        art.gather_trajectories(\n",
-    "            ((rollout(openai_client, prompt) for _ in range(64)) for prompt in prompts),\n",
-    "            pbar_desc=\"train\",\n",
-    "        ),\n",
+    "        pbar_desc=\"gather\",\n",
     "    )\n",
-    "    await model.log(val_groups)\n",
     "    await model.train(\n",
     "        train_groups,\n",
     "        config=art.TrainConfig(learning_rate=1e-4),\n",
