--- a/examples/2048-old.ipynb
+++ b/examples/2048-old.ipynb
@@ -91,7 +91,6 @@
     "import art\n",
     "import asyncio\n",
     "from dotenv import load_dotenv\n",
-    "import art.trajectories\n",
     "from art.utils.get_trajectory_messages import get_trajectory_messages\n",
     "import json\n",
     "import openai\n",
@@ -397,14 +396,16 @@
     "persistent_client = None\n",
     "\n",
     "openai_client = await model.openai_client()\n",
-    "\n",
     "for i in range(await model.get_step(), 500):\n",
-    "    train_groups = await art.gather_trajectories(\n",
-    "        (rollout(openai_client, i, is_validation=False) for _ in range(6)),\n",
+    "    train_groups = await art.gather_trajectory_groups(\n",
+    "        (\n",
+    "            art.TrajectoryGroup(\n",
+    "                rollout(openai_client, i, is_validation=False) for _ in range(6)\n",
+    "            )\n",
+    "            for _ in range(1)\n",
+    "        ),\n",
     "        pbar_desc=\"train\",\n",
     "    )\n",
-    "    # combine train_groups into a single list\n",
-    "    train_groups = [[item for sublist in train_groups for item in sublist]]\n",
     "    await model.delete_checkpoints()\n",
     "    await model.train(train_groups, config=art.TrainConfig(learning_rate=3e-5))"
    ]
