--- a/examples/temporal-clue.ipynb
+++ b/examples/temporal-clue.ipynb
@@ -64,8 +64,6 @@
     "import re\n",
     "from typing import TypedDict\n",
     "\n",
-    "import art.trajectories\n",
-    "\n",
     "load_dotenv()\n",
     "\n",
     "\n",
@@ -117,16 +115,16 @@
     "openai_client = await model.openai_client()\n",
     "for i in range(await model.get_step(), 1_000):\n",
     "    val_groups, train_groups = await asyncio.gather(\n",
-    "        art.gather_trajectories(\n",
+    "        art.gather_trajectory_groups(\n",
     "            (\n",
-    "                (rollout(openai_client, puzzle) for _ in range(2))\n",
+    "                art.TrajectoryGroup(rollout(openai_client, puzzle) for _ in range(2))\n",
     "                for puzzle in val_puzzles\n",
     "            ),\n",
     "            pbar_desc=\"val\",\n",
     "        ),\n",
-    "        art.gather_trajectories(\n",
+    "        art.gather_trajectory_groups(\n",
     "            (\n",
-    "                (rollout(openai_client, puzzle) for _ in range(50))\n",
+    "                art.TrajectoryGroup(rollout(openai_client, puzzle) for _ in range(50))\n",
     "                for puzzle in train_puzzles[i * stride : (i + 1) * stride]\n",
     "            ),\n",
     "            pbar_desc=\"train\",\n",
