--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -111,8 +111,6 @@
     "from typing import Literal\n",
     "from pydantic import BaseModel\n",
     "\n",
-    "import art.trajectories\n",
-    "\n",
     "load_dotenv()\n",
     "\n",
     "\n",
@@ -370,20 +368,17 @@
     "for i in range(await model.get_step(), 50):\n",
     "    val_groups, train_groups = await asyncio.gather(\n",
     "        art.gather_trajectories(\n",
-    "            (\n",
-    "                (rollout(openai_client, i, is_validation=True) for _ in range(64))\n",
-    "                for _ in range(1)\n",
-    "            ),\n",
-    "            pbar_desc=\"val\",\n",
-    "            return_exceptions=False,\n",
+    "            (rollout(openai_client, i, is_validation=True) for _ in range(64)),\n",
+    "            pbar_desc=\"val_groups\",\n",
     "        ),\n",
-    "        art.gather_trajectories(\n",
+    "        art.gather_trajectory_groups(\n",
     "            (\n",
-    "                (rollout(openai_client, i, is_validation=False) for _ in range(512))\n",
+    "                art.TrajectoryGroup(\n",
+    "                    rollout(openai_client, i, is_validation=False) for _ in range(512)\n",
+    "                )\n",
     "                for _ in range(1)\n",
     "            ),\n",
-    "            pbar_desc=\"train\",\n",
-    "            return_exceptions=False,\n",
+    "            pbar_desc=\"train_groups\",\n",
     "        ),\n",
     "    )\n",
     "    await model.log(val_groups)\n",
