--- a/examples/tic_tac_toe/tic-tac-toe-unsloth.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe-unsloth.ipynb
@@ -100,8 +100,6 @@
     "from typing import Literal\n",
     "from pydantic import BaseModel\n",
     "\n",
-    "import art.trajectories\n",
-    "\n",
     "load_dotenv()\n",
     "\n",
     "\n",
@@ -357,13 +355,14 @@
     "\n",
     "openai_client = await model.openai_client()\n",
     "for i in range(await model.get_step(), 1000):\n",
-    "    train_groups = await art.gather_trajectories(\n",
+    "    train_groups = await art.gather_trajectory_groups(\n",
     "        (\n",
-    "            (rollout(openai_client, i, is_validation=False) for _ in range(48))\n",
+    "            art.TrajectoryGroup(\n",
+    "                rollout(openai_client, i, is_validation=False) for _ in range(48)\n",
+    "            )\n",
     "            for _ in range(1)\n",
     "        ),\n",
-    "        pbar_desc=\"train\",\n",
-    "        return_exceptions=False,\n",
+    "        pbar_desc=\"gather\",\n",
     "    )\n",
     "    await model.train(\n",
     "        train_groups,\n",
