refactor: Change Model.name -> Model.id and add Model.project

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -62,9 +62,9 @@
     "load_dotenv()\n",
     "\n",
     "\n",
-    "api = art.LocalAPI(wandb_project=\"yes-no-maybe\")\n",
+    "api = art.LocalAPI()\n",
     "model = await api.get_or_create_model(\n",
-    "    name=\"001\", base_model=\"Qwen/Qwen2.5-7B-Instruct\", _config={}\n",
+    "    id=\"001\", project=\"yes-no-maybe\", base_model=\"Qwen/Qwen2.5-7B-Instruct\", _config={}\n",
     ")\n",
     "\n",
     "\n",
@@ -76,7 +76,7 @@
     "        }\n",
     "    ]\n",
     "    chat_completion = await client.chat.completions.create(\n",
-    "        messages=messages, model=model.name, max_tokens=100\n",
+    "        messages=messages, model=model.id, max_tokens=100\n",
     "    )\n",
     "    choice = chat_completion.choices[0]\n",
     "    content = choice.message.content\n",
