--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -76,9 +76,9 @@
         "random.seed(42)\n",
         "\n",
         "\n",
-        "api = art.LocalAPI(wandb_project=\"agent-reinforcement-training\")\n",
+        "api = art.LocalAPI()\n",
         "model = await api.get_or_create_model(\n",
-        "    name=\"tic-tac-toe-003\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+        "    id=\"001\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
         ")"
       ]
     },
@@ -140,7 +140,7 @@
         "            return await client.chat.completions.create(\n",
         "                max_completion_tokens=2048,\n",
         "                messages=messages,\n",
-        "                model=model.name,\n",
+        "                model=model.id,\n",
         "                extra_body={\"guided_json\": AgentMove.model_json_schema()},\n",
         "            )\n",
         "\n",
@@ -161,7 +161,7 @@
         "                requested_at=requested_at,\n",
         "                received_at=int(time.time() * 1000),\n",
         "                req_payload={\n",
-        "                    \"model\": model.name,\n",
+        "                    \"model\": model.id,\n",
         "                    \"messages\": messages,\n",
         "                    \"metadata\": {\n",
         "                        \"notebook-id\": \"tic-tac-toe\",\n",
