--- a/examples/2048/2048-multi-turn.ipynb
+++ b/examples/2048/2048-multi-turn.ipynb
@@ -76,9 +76,9 @@
     "random.seed(42)\n",
     "\n",
     "\n",
-    "api = art.LocalAPI(wandb_project=\"agent-reinforcement-training\")\n",
+    "api = art.LocalAPI()\n",
     "model = await api.get_or_create_model(\n",
-    "    name=\"2048-multi-turn-001\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    id=\"001\", project=\"2048-multi-turn\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")"
    ]
   },
@@ -139,7 +139,7 @@
     "            return await client.chat.completions.create(\n",
     "                max_completion_tokens=2048,\n",
     "                messages=messages,\n",
-    "                model=model.name,\n",
+    "                model=model.id,\n",
     "            )\n",
     "\n",
     "        try:\n",
@@ -159,7 +159,7 @@
     "                requested_at=requested_at,\n",
     "                received_at=int(time.time() * 1000),\n",
     "                req_payload={\n",
-    "                    \"model\": model.name,\n",
+    "                    \"model\": model.id,\n",
     "                    \"messages\": messages,\n",
     "                    \"metadata\": {\n",
     "                        \"game_id\": game[\"id\"],\n",
