--- a/examples/temporal-clue.ipynb
+++ b/examples/temporal-clue.ipynb
@@ -81,9 +81,10 @@
     "random.shuffle(train_puzzles)\n",
     "\n",
     "\n",
-    "api = art.LocalAPI(wandb_project=\"agent-reinforcement-training\")\n",
-    "model = await api._get_or_create_model(\n",
-    "    name=\"temporal-clue-unsloth-002\",\n",
+    "api = art.LocalAPI()\n",
+    "model = await api.get_or_create_model(\n",
+    "    id=\"001\",\n",
+    "    project=\"temporal-clue\",\n",
     "    base_model=\"Qwen/Qwen2.5-14B-Instruct\",\n",
     "    _config={\"init_args\": {\"gpu_memory_utilization\": 0.775}},\n",
     ")\n",
@@ -94,7 +95,7 @@
     ") -> art.Trajectory:\n",
     "    messages: art.Messages = [{\"role\": \"user\", \"content\": puzzle[\"prompt\"]}]\n",
     "    chat_completion = await client.chat.completions.create(\n",
-    "        messages=messages, model=model.name\n",
+    "        messages=messages, model=model.id\n",
     "    )\n",
     "    choice = chat_completion.choices[0]\n",
     "    content = choice.message.content\n",
@@ -155,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
