--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,12 @@
     "\n",
     "api = art.LocalAPI()\n",
     "model = await api.get_or_create_model(\n",
-    "    id=\"001\", project=\"yes-no-maybe\", base_model=\"Qwen/Qwen2.5-7B-Instruct\", _config={}\n",
+    "    id=\"001\",\n",
+    "    project=\"yes-no-maybe\",\n",
+    "    base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
+    "    _config=art.config.ModelConfig(\n",
+    "        init_args=art.config.InitArgs(gpu_memory_utilization=0.75)\n",
+    "    ),\n",
     ")\n",
     "\n",
     "\n",
@@ -110,7 +115,7 @@
     "]\n",
     "\n",
     "openai_client = await model.openai_client()\n",
-    "for i in range(await model.get_step(), 1_000):\n",
+    "for _ in range(await model.get_step(), 1_000):\n",
     "    train_groups = await art.gather_trajectory_groups(\n",
     "        (\n",
     "            art.TrajectoryGroup(rollout(openai_client, prompt) for _ in range(64))\n",
