chore: Revert id -> name

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "api = art.LocalAPI()\n",
     "model = await api.get_or_create_model(\n",
-    "    id=\"001\",\n",
+    "    name=\"001\",\n",
     "    project=\"yes-no-maybe\",\n",
     "    base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
     "    _config=art.config.ModelConfig(\n",
@@ -81,7 +81,7 @@
     "        }\n",
     "    ]\n",
     "    chat_completion = await client.chat.completions.create(\n",
-    "        messages=messages, model=model.id, max_tokens=100\n",
+    "        messages=messages, model=model.name, max_tokens=100\n",
     "    )\n",
     "    choice = chat_completion.choices[0]\n",
     "    content = choice.message.content\n",
