--- a/examples/2048/2048-single-turn.ipynb
+++ b/examples/2048/2048-single-turn.ipynb
@@ -988,7 +988,7 @@
     "            return await client.chat.completions.create(\n",
     "                max_completion_tokens=2048,\n",
     "                messages=messages,\n",
-    "                model=model.id,\n",
+    "                model=model.name,\n",
     "                temperature=1.5,\n",
     "            )\n",
     "\n",
@@ -1009,7 +1009,7 @@
     "                requested_at=requested_at,\n",
     "                received_at=int(time.time() * 1000),\n",
     "                req_payload={\n",
-    "                    \"model\": model.id,\n",
+    "                    \"model\": model.name,\n",
     "                    \"messages\": messages,\n",
     "                    \"metadata\": {\n",
     "                        \"game_id\": game[\"id\"],\n",
