--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -78,7 +78,7 @@
         "\n",
         "api = art.LocalAPI()\n",
         "model = await api.get_or_create_model(\n",
-        "    id=\"001\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+        "    name=\"001\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
         ")"
       ]
     },
@@ -140,7 +140,7 @@
         "            return await client.chat.completions.create(\n",
         "                max_completion_tokens=2048,\n",
         "                messages=messages,\n",
-        "                model=model.id,\n",
+        "                model=model.name,\n",
         "                extra_body={\"guided_json\": AgentMove.model_json_schema()},\n",
         "            )\n",
         "\n",
@@ -161,7 +161,7 @@
         "                requested_at=requested_at,\n",
         "                received_at=int(time.time() * 1000),\n",
         "                req_payload={\n",
-        "                    \"model\": model.id,\n",
+        "                    \"model\": model.name,\n",
         "                    \"messages\": messages,\n",
         "                    \"metadata\": {\n",
         "                        \"notebook-id\": \"tic-tac-toe\",\n",
@@ -253,7 +253,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.9"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
