--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -327,7 +327,9 @@
         "\n",
         "When the game is finished the `reward` for the agent's performance is calculated based on the highest cell value on the board, which is then assigned to the trajectory.\n",
         "\n",
-        "This rollout function will be called many times in parallel during each iteration of the training loop."
+        "This rollout function will be called many times in parallel during each iteration of the training loop.\n",
+        "\n",
+        "NOTE: To avoid OOM errors on a T4, we're reducing the winning value from 2048 to 256, which in turn reduces the minimum number of moves to win from 939 to 117."
       ]
     },
     {
@@ -343,7 +345,7 @@
         "import math\n",
         "import requests\n",
         "\n",
-        "WINNING_VALUE = 512\n",
+        "WINNING_VALUE = 256\n",
         "\n",
         "\n",
         "@art.retry(exceptions=(openai.LengthFinishReasonError, requests.ReadTimeout))\n",
