--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -41,6 +41,22 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# make sure we're using numpy 1.*.*\n",
+        "import numpy as np\n",
+        "# check if numpy version is 1.*.*\n",
+        "\n",
+        "if (np.__version__).startswith(\"1.\"):\n",
+        "    print(\"Numpy version is 1.*.*, you're good to go!\")\n",
+        "else:\n",
+        "    raise ValueError(\"Please restart your runtime using the above instructions!\")"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -69,7 +85,9 @@
         "\n",
         "ART allows your agent to learn by interacting with its environment. In this example, we'll create an environment in which the agent can play 2048.\n",
         "\n",
-        "Feel free to read as much or as little of this section's code as you'd like. The important thing to understand is that we're defining the rules of this agent's environment. In many cases, this will already be defined by the task you're trying to solve, but if you need to define a custom environment, this is how you do it."
+        "Feel free to read as much or as little of this section's code as you'd like. The important thing to understand is that we're defining the rules of this agent's environment. In many cases, this will already be defined by the task you're trying to solve, but if you need to define a custom environment, this is how you do it.\n",
+        "\n",
+        "NOTE: To avoid OOM errors on a T4, we're reducing the winning value from 2048 to 256, which in turn reduces the minimum number of moves to win from 939 to 117."
       ]
     },
     {
@@ -82,7 +100,6 @@
         "import random\n",
         "from typing import TypedDict\n",
         "from typing import Literal\n",
-        "from pydantic import BaseModel\n",
         "import string\n",
         "import xml.etree.ElementTree as ET\n",
         "\n",
@@ -328,9 +345,7 @@
         "\n",
         "When the game is finished the `reward` for the agent's performance is calculated based on the highest cell value on the board, which is then assigned to the trajectory.\n",
         "\n",
-        "This rollout function will be called many times in parallel during each iteration of the training loop.\n",
-        "\n",
-        "NOTE: To avoid OOM errors on a T4, we're reducing the winning value from 2048 to 256, which in turn reduces the minimum number of moves to win from 939 to 117."
+        "This rollout function will be called many times in parallel during each iteration of the training loop."
       ]
     },
     {
