Add cell on env variables

--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -60,6 +60,39 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Environment Variables\n",
+        "\n",
+        "Later on in the notebook, we'll be creating a model that automatically logs metrics to Weights & Biases. In order to do so, you'll need to provide your Weights & Biases API key as an environment variable.\n",
+        "\n",
+        "You can also optionally initiate an OpenPipe client to report completions to a [dashboard](https://app.openpipe.ai) to get a feel for what the completions your model is generating look like, and how they change over time. Logging to OpenPipe is free, but is not required for training!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "# Required\n",
+        "WANDB_API_KEY=\"\"\n",
+        "if WANDB_API_KEY:\n",
+        "    os.environ[\"WANDB_API_KEY\"] = WANDB_API_KEY\n",
+        "\n",
+        "# Optional\n",
+        "OPENPIPE_API_KEY=\"\"\n",
+        "if OPENPIPE_API_KEY:\n",
+        "    os.environ[\"OPENPIPE_API_KEY\"] = OPENPIPE_API_KEY\n",
+        "\n",
+        "# Make sure a WANDB_API_KEY is set\n",
+        "assert os.getenv(\"WANDB_API_KEY\") is not None, \"You need to set your WANDB_API_KEY environment variable either here, in your .env file, or in your Colab environment variables\"\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Installation"
       ]
     },
@@ -69,6 +102,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%%capture\n",
         "!uv pip install openpipe-art openpipe --prerelease allow"
       ]
     },
@@ -266,9 +300,7 @@
       "source": [
         "### Creating a Model\n",
         "\n",
-        "Now that we've defined the rules of our environment, we can create a model that will learn to play 2048. We'll use a Qwen 2.5 7B model for this example. The `name` parameter will be associated with a wandb run, and the `base_model` parameter is the model that we'll be training a LoRA on top of.\n",
-        "\n",
-        "We're also initiating an OpenPipe client to report completions to OpenPipe to help debug issues. While logging to OpenPipe is free, it is not required for training. However, if you do want to enable logging, remember to add `OPENPIPE_API_KEY` as well as `WANDB_API_KEY` to your environment variables!"
+        "Now that we've defined the rules of our environment, we can create a model that will learn to play 2048. We'll use a Qwen 2.5 7B model for this example. The `name` parameter will be associated with a wandb run, and the `base_model` parameter is the model that we'll be training a LoRA on top of."
       ]
     },
     {
