--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "To train this agent, click *Runtime* and press *Run all*. Make sure you've enabled a free Tesla T4 GPU!\n",
         "<div class=\"align-center\">\n",
-        "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/ART_pill.png\" height=\"50\"></a>\n",
+        "<a href=\"https://github.com/openpipe/art\"><img src=\"https://github.com/openpipe/art/raw/main/assets/ART_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://discord.com/invite/dnseNZuQ\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Discord_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://openpipe.ai/blog/art-trainer-a-new-rl-trainer-for-agents\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Launch_pill.png\" height=\"50\"></a>\n",
         "\n",
@@ -553,7 +553,7 @@
       "metadata": {},
       "source": [
         "<div class=\"align-center\">\n",
-        "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/ART_pill.png\" height=\"50\"></a>\n",
+        "<a href=\"https://github.com/openpipe/art\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/ART_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://discord.com/invite/dnseNZuQ\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Discord_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://openpipe.ai/blog/art-trainer-a-new-rl-trainer-for-agents\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Launch_pill.png\" height=\"50\"></a>\n",
         "\n",
