--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -87,7 +87,7 @@
         "    os.environ[\"OPENPIPE_API_KEY\"] = OPENPIPE_API_KEY\n",
         "\n",
         "# Make sure a WANDB_API_KEY is set\n",
-        "assert os.getenv(\"WANDB_API_KEY\") is not None, \"You need to set your WANDB_API_KEY environment variable either here, in your .env file, or in your Colab environment variables\"\n"
+        "assert os.getenv(\"WANDB_API_KEY\") is not None, \"Please set a WANDB_API_KEY environment variable either here, in your .env file, or in your Colab environment variables\"\n"
       ]
     },
     {
