--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -291,7 +291,11 @@
         "    if any(cell is None for row in game[\"board\"] for cell in row):\n",
         "        return False\n",
         "\n",
-        "    return True\n"
+        "    return True\n",
+        "\n",
+        "# Returns the sum of all the cell values on the board\n",
+        "def total_board_value(game: TwentyFortyEightGame) -> int:\n",
+        "    return sum([cell for row in game[\"board\"] for cell in row if cell is not None])\n"
       ]
     },
     {
@@ -477,9 +481,11 @@
         "            max_value = max_cell_value(game)\n",
         "\n",
         "            if max_value < WINNING_VALUE:\n",
-        "                # scale reward logarithmically between 0 for 2 and 1 for 2048\n",
-        "                trajectory.reward = (math.log(max_value, 2) - 1) / (\n",
-        "                    math.log(WINNING_VALUE, 2) - 1\n",
+        "\n",
+        "                board_value = total_board_value(game)\n",
+        "                # scale board value logarithmically between 0 for 2 * 16 and 1 for WINNING_VALUE * 16\n",
+        "                trajectory.reward = (math.log(board_value, 2) - 1) / (\n",
+        "                    math.log(WINNING_VALUE * 16, 2) - 1\n",
         "                )\n",
         "            else:\n",
         "                # double reward if it wins\n",
@@ -545,6 +551,15 @@
         "    )\n",
         "    await model.delete_checkpoints()\n",
         "    await model.train(train_groups, config=art.TrainConfig(learning_rate=3e-5))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Recap\n",
+        "\n",
+        "Just like that, you've trained an agent to play 2048!"
       ]
     },
     {
