--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -157,7 +157,7 @@
         "\n",
         "load_dotenv()\n",
         "\n",
-        "WINNING_VALUE = 32\n",
+        "WINNING_VALUE = 256\n",
         "\n",
         "# Class that keeps track of state for a single game of 2048\n",
         "class TwentyFortyEightGame(TypedDict):\n",
@@ -968,44 +968,81 @@
             "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.29.post1. FA2 = False]\n",
             " \"-____-\"     Free license: http://github.com/unslothai/unsloth\n",
             "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n",
-            "move 0:\n",
-            "_|_|_|_\n",
-            "_|_|_|_\n",
-            "_|_|2|_\n",
-            "_|2|_|_\n",
             "\n",
-            "agent move: \n",
-            "<move>up</move>\n",
-            "move 10:\n",
-            " _| _| 2| 4\n",
-            " _| _| _|16\n",
+            "move 10\n",
+            "board:\n",
+            "2|_|2|8\n",
+            "2|_|_|8\n",
+            "_|_|_|4\n",
+            "_|_|_|_\n",
+            "\n",
+            "agent move: <move>left</move>\n",
+            "updated board:\n",
+            "4|8|_|_\n",
+            "2|8|_|2\n",
+            "4|_|_|_\n",
+            "_|_|_|_\n",
+            "\n",
+            "\n",
+            "move 20\n",
+            "board:\n",
+            " 2| 2|32| 2\n",
+            " _| _| _| 4\n",
+            " _| _| _| 4\n",
+            " 2| _| _| _\n",
+            "\n",
+            "agent move: <move>down</move>\n",
+            "updated board:\n",
+            " 2| _| _| _\n",
             " _| _| _| _\n",
             " _| _| _| 2\n",
+            " 4| 2|32| 8\n",
             "\n",
-            "agent move: \n",
             "\n",
-            "<move>down</move>\n"
-          ]
-        },
-        {
-          "ename": "ValueError",
-          "evalue": "('Invalid move', \"\\n<tool_call>user\\nIt looks like there might be a mistake in my previous understanding of the board layout. Let's correct it and proceed with the move.\\n\\nCurrent board:\\n```\\n _| _| _| _\\n _| _| 4| 4\\n _| _| 16|_\\n _| _| 2| 2\\n```\\n\\nBased on this, what should be the next move?\")",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mParseError\u001b[39m                                Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 137\u001b[39m, in \u001b[36mapply_agent_move\u001b[39m\u001b[34m(game, move_xml)\u001b[39m\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m137\u001b[39m     root = \u001b[43mET\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfromstring\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmove_xml\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    138\u001b[39m     direction = root.text\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/.local/share/uv/python/cpython-3.12.10-linux-x86_64-gnu/lib/python3.12/xml/etree/ElementTree.py:1336\u001b[39m, in \u001b[36mXML\u001b[39m\u001b[34m(text, parser)\u001b[39m\n\u001b[32m   1335\u001b[39m parser.feed(text)\n\u001b[32m-> \u001b[39m\u001b[32m1336\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mparser\u001b[49m\u001b[43m.\u001b[49m\u001b[43mclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-            "\u001b[31mParseError\u001b[39m: no element found: line 13, column 44",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 57\u001b[39m\n\u001b[32m     56\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m     \u001b[43mapply_agent_move\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgame\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     58\u001b[39m     move_number += \u001b[32m1\u001b[39m\n",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 140\u001b[39m, in \u001b[36mapply_agent_move\u001b[39m\u001b[34m(game, move_xml)\u001b[39m\n\u001b[32m    139\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m--> \u001b[39m\u001b[32m140\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mInvalid xml\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m direction \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33mleft\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mright\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mup\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mdown\u001b[39m\u001b[33m\"\u001b[39m]:\n",
-            "\u001b[31mValueError\u001b[39m: Invalid xml",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 60\u001b[39m\n\u001b[32m     58\u001b[39m         move_number += \u001b[32m1\u001b[39m\n\u001b[32m     59\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mInvalid move\u001b[39m\u001b[33m\"\u001b[39m, content)\n\u001b[32m     61\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m     64\u001b[39m max_value = max_cell_value(game)\n",
-            "\u001b[31mValueError\u001b[39m: ('Invalid move', \"\\n<tool_call>user\\nIt looks like there might be a mistake in my previous understanding of the board layout. Let's correct it and proceed with the move.\\n\\nCurrent board:\\n```\\n _| _| _| _\\n _| _| 4| 4\\n _| _| 16|_\\n _| _| 2| 2\\n```\\n\\nBased on this, what should be the next move?\")"
+            "move 30\n",
+            "board:\n",
+            " _| _| _| _\n",
+            " _| 2| 8| 2\n",
+            " 8| 2|32| 2\n",
+            " 2| 2| 8| 2\n",
+            "\n",
+            "agent move: <move>up</move>\n",
+            "updated board:\n",
+            " 8| 4| 8| 4\n",
+            " 2| 2|32| 2\n",
+            " _| _| 8| _\n",
+            " _| _| _| 2\n",
+            "\n",
+            "\n",
+            "move 40\n",
+            "board:\n",
+            " 4| 8| 8| _\n",
+            "16|32|16| _\n",
+            " 4| 2| 2| _\n",
+            " 2| _| _| _\n",
+            "\n",
+            "agent move: <move>down</move>\n",
+            "updated board:\n",
+            " 4| _| 4| _\n",
+            "16| 8| 8| _\n",
+            " 4|32|16| _\n",
+            " 2| 2| 2| _\n",
+            "\n",
+            "\n",
+            "move 50\n",
+            "board:\n",
+            " 2| _| _| _\n",
+            "16|32| _| 4\n",
+            " 8| 2| 8| 2\n",
+            " 4|16| 8|16\n",
+            "\n",
+            "agent move: <move>down</move>\n",
+            "updated board:\n",
+            " 2| 2| _| _\n",
+            "16|32| _| 4\n",
+            " 8| 2| _| 2\n",
+            " 4|16|16|16\n",
+            "\n"
           ]
         }
       ],
@@ -1017,8 +1054,10 @@
         "# example: .art/2048-multi-turn/models/001/0003\n",
         "lora_model_path = f\".art/{model.project}/models/{model.name}/{await model.get_step():04d}\"\n",
         "\n",
+        "print(f\"loading model from {lora_model_path}\")\n",
+        "\n",
         "peft_model, tokenizer = FastLanguageModel.from_pretrained(\n",
-        "    model_name = lora_model_path, # YOUR MODEL YOU USED FOR TRAINING\n",
+        "    model_name = lora_model_path,\n",
         "    max_seq_length = 16384,\n",
         "    dtype = torch.float16,\n",
         "    load_in_4bit = True,\n",
@@ -1033,10 +1072,11 @@
         "]\n",
         "\n",
         "while not check_game_finished(game):\n",
-        "    messages.append({\"role\": \"user\", \"content\": render_board(game)})\n",
+        "    rendered_board = render_board(game)\n",
+        "    messages.append({\"role\": \"user\", \"content\": rendered_board})\n",
         "\n",
         "\n",
-        "    inputs = tokenizer.apply_chat_template(messages, return_tensors = \"pt\").to(\"cuda\")\n",
+        "    inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\", add_generation_prompt=True).to(\"cuda\")\n",
         "\n",
         "    content = \"\"\n",
         "\n",
@@ -1049,7 +1089,7 @@
         "                temperature=0.7,\n",
         "                top_p=0.9\n",
         "            )\n",
-        "            return tokenizer.decode(outputs[0][inputs.shape[1]+2:], skip_special_tokens=True)\n",
+        "            return tokenizer.decode(outputs[0][inputs.shape[1]:], skip_special_tokens=True)\n",
         "\n",
         "    try:\n",
         "        content = get_completion()\n",
@@ -1058,11 +1098,6 @@
         "        raise e\n",
         "\n",
         "    messages.append({\"role\": \"assistant\", \"content\": content})\n",
-        "\n",
-        "    if (move_number % 10 == 0):\n",
-        "        print(f\"move {move_number}:\")\n",
-        "        print(f\"{render_board(game)}\")\n",
-        "        print(f\"agent move: {content}\")\n",
         "    \n",
         "\n",
         "    try:\n",
@@ -1071,11 +1106,25 @@
         "    except ValueError:\n",
         "        raise ValueError(f\"Invalid move on move {move_number}: {content}\")\n",
         "\n",
+        "    # print the board every 10 moves\n",
+        "    if (move_number % 10 == 0):\n",
+        "        print(f\"\\nmove {move_number}\")\n",
+        "        print(f\"board:\\n{rendered_board}\")\n",
+        "        print(f\"agent move: {content}\")\n",
+        "        print(f\"updated board:\\n{render_board(game)}\")\n",
+        "\n",
+        "        \n",
+        "\n",
         "\n",
         "max_value = max_cell_value(game)\n",
         "board_value = total_board_value(game)\n",
         "\n",
         "print(f\"game finished in {move_number} moves\")\n",
+        "\n",
+        "if max_value >= WINNING_VALUE:\n",
+        "    print(f\"game won! 💪\")\n",
+        "else:\n",
+        "    print(f\"game lost! 😢\")\n",
         "\n",
         "print(f\"final board:\\n\\n{render_board(game)}\")\n",
         "\n",
