--- a/examples/prisoners-dilemma.ipynb
+++ b/examples/prisoners-dilemma.ipynb
@@ -10,7 +10,6 @@
     "import asyncio\n",
     "from dotenv import load_dotenv\n",
     "import re\n",
-    "from tqdm.asyncio import tqdm\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -53,8 +52,12 @@
     "    )\n",
     "    for _ in range(num_rounds):\n",
     "        chat_completions = await asyncio.gather(\n",
-    "            client.chat.completions.create(messages=messages[0], model=model.name),\n",
-    "            client.chat.completions.create(messages=messages[1], model=model.name),\n",
+    "            client.chat.completions.create(\n",
+    "                messages=messages[0], model=model.name, max_completion_tokens=512\n",
+    "            ),\n",
+    "            client.chat.completions.create(\n",
+    "                messages=messages[1], model=model.name, max_completion_tokens=512\n",
+    "            ),\n",
     "        )\n",
     "        choices = [chat_completion.choices[0] for chat_completion in chat_completions]\n",
     "        messages[0].append({\"role\": \"assistant\", \"content\": choices[0].message.content})\n",
@@ -67,8 +70,7 @@
     "                if (\n",
     "                    matches := re.findall(\n",
     "                        pattern=r\"cooperate|defect\",\n",
-    "                        string=choice.message.content or \"\",\n",
-    "                        flags=re.IGNORECASE,\n",
+    "                        string=(choice.message.content or \"\").lower(),\n",
     "                    )\n",
     "                )\n",
     "                else \"none\"\n",
@@ -93,10 +95,11 @@
     "            trajectories[0].reward += default_rewards[actions[0]]\n",
     "            trajectories[1].reward += default_rewards[actions[1]]\n",
     "        for i in range(2):\n",
+    "            joiner = \"\\n> \"\n",
     "            messages[i].append(\n",
     "                {\n",
     "                    \"role\": \"user\",\n",
-    "                    \"content\": f\"The other player responded as follows: \\n\\n{choices[1 - i].message.content}\\n\\n\"\n",
+    "                    \"content\": f\"The other player responded as follows: \\n\\n> {joiner.join((choices[1 - i].message.content or '').splitlines())}\\n\\n\"\n",
     "                    f\"Your score is {trajectories[i].reward}. The other player's score is {trajectories[1 - i].reward}.\\n\\n\"\n",
     "                    \"For the next round, would you like to cooperate or defect?\",\n",
     "                }\n",
@@ -106,18 +109,13 @@
     "\n",
     "\n",
     "for i in range(await model.get_step(), 1_000):\n",
-    "    game_trajectories = await tqdm.gather(\n",
-    "        *(rollout_game() for _ in range(32)), desc=\"rollout\"\n",
-    "    )\n",
-    "    trajectory_groups = [\n",
-    "        art.TrajectoryGroup(\n",
-    "            game_trajectories[game_index][player_index]\n",
-    "            for game_index in range(len(game_trajectories))\n",
-    "        )\n",
-    "        for player_index in range(2)\n",
-    "    ]\n",
+    "    game_trajectories = await art.gather_trajectories(rollout_game() for _ in range(32))\n",
     "    await model.train(\n",
-    "        trajectory_groups,\n",
+    "        trajectory_groups=[\n",
+    "            # Since all games have the same starting state and are symmetric, we can gather\n",
+    "            # all player trajectories from all games into a single trajectory group.\n",
+    "            art.TrajectoryGroup(game_trajectories)\n",
+    "        ],\n",
     "        config=art.TrainConfig(learning_rate=5e-5),\n",
     "    )"
    ]
@@ -130,8 +128,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.16"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
