chore: Change support to nested trajectories

--- a/examples/prisoners-dilemma.ipynb
+++ b/examples/prisoners-dilemma.ipynb
@@ -20,7 +20,7 @@
     ")\n",
     "client = await model.openai_client()\n",
     "\n",
-    "num_rounds = 10\n",
+    "num_rounds = 4\n",
     "prompt = f\"\"\"\n",
     "You are playing a game of prisoners' dilemma with another player.\n",
     "\n",
@@ -37,8 +37,8 @@
     "\n",
     "You will play this game {num_rounds} times with the same player.\n",
     "\n",
-    "For your first turn, would you like to cooperate or defect?\n",
-    "\"\"\"\n",
+    "For your first turn, would you like to cooperate or defect? End your response with \"cooperate\" or \"defect\".\n",
+    "\"\"\".strip()\n",
     "\n",
     "\n",
     "async def rollout_game() -> tuple[art.Trajectory, art.Trajectory]:\n",
@@ -101,7 +101,7 @@
     "                    \"role\": \"user\",\n",
     "                    \"content\": f\"The other player responded as follows: \\n\\n> {joiner.join((choices[1 - i].message.content or '').splitlines())}\\n\\n\"\n",
     "                    f\"Your score is {trajectories[i].reward}. The other player's score is {trajectories[1 - i].reward}.\\n\\n\"\n",
-    "                    \"For the next round, would you like to cooperate or defect?\",\n",
+    "                    'For the next round, would you like to cooperate or defect? End your response with \"cooperate\" or \"defect\".',\n",
     "                }\n",
     "            )\n",
     "            trajectories[i].messages_and_choices.append(messages[i][-1])\n",
@@ -109,12 +109,16 @@
     "\n",
     "\n",
     "for i in range(await model.get_step(), 1_000):\n",
-    "    game_trajectories = await art.gather_trajectories(rollout_game() for _ in range(32))\n",
+    "    game_trajectories = await art.gather_trajectories(rollout_game() for _ in range(8))\n",
     "    await model.train(\n",
     "        trajectory_groups=[\n",
     "            # Since all games have the same starting state and are symmetric, we can gather\n",
     "            # all player trajectories from all games into a single trajectory group.\n",
-    "            art.TrajectoryGroup(game_trajectories)\n",
+    "            art.TrajectoryGroup(\n",
+    "                trajectory\n",
+    "                for trajectories in game_trajectories\n",
+    "                for trajectory in trajectories\n",
+    "            )\n",
     "        ],\n",
     "        config=art.TrainConfig(learning_rate=5e-5),\n",
     "    )"
