--- a/examples/prisoners-dilemma.ipynb
+++ b/examples/prisoners-dilemma.ipynb
@@ -4,91 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gcpuser/sky_workdir/src/art/__init__.py:10: UserWarning: WARNING: Unsloth should be imported before transformers, peft to ensure all optimizations are applied. Your code may run slower or encounter memory issues without these optimizations.\n",
-      "\n",
-      "Please restructure your imports with 'import unsloth' at the top of your file.\n",
-      "  import unsloth  # type: ignore\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
-      "Unsloth: Failed to patch Gemma3ForConditionalGeneration.\n",
-      "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
-      "INFO 04-15 18:05:28 __init__.py:207] Automatically detected platform cuda.\n",
-      "==((====))==  Unsloth 2025.3.19: Fast Qwen2 patching. Transformers: 4.51.1. vLLM: 0.7.3.\n",
-      "   \\\\   /|    NVIDIA H100 80GB HBM3. Num GPUs = 1. Max memory: 79.109 GB. Platform: Linux.\n",
-      "O^O/ \\_/ \\    Torch: 2.5.1+cu124. CUDA: 9.0. CUDA Toolkit: 12.4. Triton: 3.1.0\n",
-      "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.29.post1. FA2 = False]\n",
-      " \"-____-\"     Free license: http://github.com/unslothai/unsloth\n",
-      "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n",
-      "Unsloth: vLLM loading unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit with actual GPU utilization = 78.3%\n",
-      "Unsloth: Your GPU has CUDA compute capability 9.0 with VRAM = 79.11 GB.\n",
-      "Unsloth: Using conservativeness = 1.0. Chunked prefill tokens = 32768. Num Sequences = 368.\n",
-      "Unsloth: vLLM's KV Cache can use up to 56.08 GB. Also swap space = 6 GB.\n",
-      "INFO 04-15 18:05:38 config.py:549] This model supports multiple tasks: {'reward', 'classify', 'score', 'generate', 'embed'}. Defaulting to 'generate'.\n",
-      "Unsloth: vLLM Bitsandbytes config using kwargs = {'load_in_8bit': False, 'load_in_4bit': True, 'bnb_4bit_compute_dtype': 'bfloat16', 'bnb_4bit_quant_storage': 'uint8', 'bnb_4bit_quant_type': 'nf4', 'bnb_4bit_use_double_quant': True, 'llm_int8_enable_fp32_cpu_offload': False, 'llm_int8_has_fp16_weight': False, 'llm_int8_skip_modules': ['lm_head', 'multi_modal_projector', 'merger', 'modality_projection', 'model.layers.0.self_attn', 'model.layers.1.self_attn', 'model.layers.2.mlp', 'model.layers.3.mlp', 'model.layers.4.mlp', 'model.layers.25.mlp', 'model.layers.26.mlp'], 'llm_int8_threshold': 6.0}\n",
-      "INFO 04-15 18:05:38 llm_engine.py:234] Initializing a V0 LLM engine (v0.7.3) with config: model='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', speculative_config=None, tokenizer='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=32768, download_dir=None, load_format=bitsandbytes, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=bitsandbytes, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='xgrammar'), observability_config=ObservabilityConfig(otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, num_scheduler_steps=16, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[368,360,352,344,336,328,320,312,304,296,288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":368}, use_cached_outputs=False, \n",
-      "INFO 04-15 18:05:39 cuda.py:229] Using Flash Attention backend.\n",
-      "WARNING 04-15 18:05:39 registry.py:335] `mm_limits` has already been set for model=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, and will be overwritten by the new values.\n",
-      "INFO 04-15 18:05:39 model_runner.py:1110] Starting to load model unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit...\n",
-      "INFO 04-15 18:05:39 loader.py:1089] Loading weights with BitsAndBytes quantization.  May take a while ...\n",
-      "INFO 04-15 18:05:40 weight_utils.py:254] Using model weights format ['*.safetensors']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading safetensors checkpoint shards:   0% Completed | 0/2 [00:00<?, ?it/s]\n",
-      "Loading safetensors checkpoint shards:  50% Completed | 1/2 [00:00<00:00,  1.17it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 2/2 [00:01<00:00,  1.80it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 2/2 [00:01<00:00,  1.67it/s]\n",
-      "\n",
-      "Loading safetensors checkpoint shards:   0% Completed | 0/2 [00:00<?, ?it/s]\n",
-      "Loading safetensors checkpoint shards:  50% Completed | 1/2 [00:00<00:00,  1.12it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 2/2 [00:01<00:00,  1.74it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 2/2 [00:01<00:00,  1.60it/s]\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO 04-15 18:05:43 model_runner.py:1115] Loading model weights took 6.6961 GB\n",
-      "INFO 04-15 18:05:43 punica_selector.py:18] Using PunicaWrapperGPU.\n",
-      "INFO 04-15 18:05:45 worker.py:267] Memory profiling takes 2.40 seconds\n",
-      "INFO 04-15 18:05:45 worker.py:267] the current vLLM instance can use total_gpu_memory (79.11GiB) x gpu_memory_utilization (0.78) = 61.94GiB\n",
-      "INFO 04-15 18:05:45 worker.py:267] model weights take 6.70GiB; non_torch_memory takes 0.15GiB; PyTorch activation peak memory takes 4.72GiB; the rest of the memory reserved for KV Cache is 50.37GiB.\n",
-      "INFO 04-15 18:05:46 executor_base.py:111] # cuda blocks: 58951, # CPU blocks: 7021\n",
-      "INFO 04-15 18:05:46 executor_base.py:116] Maximum concurrency for 32768 tokens per request: 28.78x\n",
-      "INFO 04-15 18:05:48 model_runner.py:1434] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Capturing CUDA graph shapes: 100%|██████████| 49/49 [00:37<00:00,  1.29it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO 04-15 18:06:26 model_runner.py:1562] Graph capturing finished in 38 secs, took 5.56 GiB\n",
-      "INFO 04-15 18:06:26 llm_engine.py:436] init engine (profile, create kv cache, warmup model) took 43.44 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import art\n",
     "import asyncio\n",
@@ -102,7 +18,7 @@
     "\n",
     "api = art.LocalAPI()\n",
     "model = await api.get_or_create_model(\n",
-    "    name=\"004\", project=\"prisoners-dilemma\", base_model=BASE_MODEL\n",
+    "    name=\"001\", project=\"prisoners-dilemma\", base_model=BASE_MODEL\n",
     ")\n",
     "client = await model.openai_client()\n",
     "\n",
@@ -123,7 +39,7 @@
     "\n",
     "You will play this game {PRISONERS_DILEMMA_ROUNDS} times with the same player.\n",
     "\n",
-    "For your first turn, would you like to cooperate or defect? After thinking, respond with either 'cooperate' or 'defect'.\".\n",
+    "For your first turn, would you like to cooperate or defect?\".\n",
     "\"\"\".strip()\n",
     "\n",
     "\n",
@@ -189,7 +105,7 @@
     "                    \"role\": \"user\",\n",
     "                    \"content\": f\"The other player responded as follows: \\n\\n> {joiner.join((choices[1 - i].message.content or '').splitlines())}\\n\\n\"\n",
     "                    f\"Your score is {trajectories[i].reward}. The other player's score is {trajectories[1 - i].reward}.\\n\\n\"\n",
-    "                    \"For the next round, would you like to cooperate or defect? After thinking, respond with either 'cooperate' or 'defect'.\",\n",
+    "                    \"For the next round, would you like to cooperate or defect?\",\n",
     "                }\n",
     "            )\n",
     "            trajectories[i].messages_and_choices.append(messages[i][-1])\n",
