Ignore pip cache

--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -118,7 +118,7 @@
       "outputs": [],
       "source": [
         "%%capture\n",
-        "!uv pip install openpipe-art openpipe --prerelease allow"
+        "!uv pip install openpipe-art openpipe --prerelease allow --no-cache-dir"
       ]
     },
     {
