--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -561,7 +561,7 @@
         "        pbar_desc=\"gather\",\n",
         "        max_exceptions=18,\n",
         "    )\n",
-        "    # await model.delete_checkpoints()\n",
+        "    await model.delete_checkpoints()\n",
         "    await model.train(\n",
         "        train_groups,\n",
         "        config=art.TrainConfig(learning_rate=3e-5),\n",
